tests/NormalTests/paczka1/small_fuzzy/36330045.err
Error in line 3: xyH S324 4,9
Error in line 5: xyH S47 67,1
Error in line 2: 7UikupR8HBZ S324 48,7
Error in line 8: A221 S590 28,3
Error in line 9: A221 A221 84,8
Error in line 14: A221 S590 35,4
